# animoxtend.github.io

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruff.toml  run.sh  uno.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
docs/: _register.md  docs.md  index.md  structure.json  toc.md
docs/.vitepress/: config.ts  constants.json  constants.ts  docs.ts  head.ts  structure.json
docs/.vitepress/config/: index.ts
docs/.vitepress/configs/: en.ts  index.ts  zh.ts
docs/.vitepress/nav/: en.ts  zh.ts
docs/.vitepress/sidebar/: en.ts  zh.ts
docs/.vitepress/theme/: index.ts  style.css  themeConfig.ts
docs/.vitepress/theme/components/: RegisterForm.vue  bsz.vue  validators.ts
docs/cn/插件用户手册 V1.0.0/: index.md
docs/docs/zh/: _get-started.md  _register.md
docs/en/: _get-started.md  _register.md  index.md
docs/public/: addon_info.json  plugin_version.txt
docs/zh/: _bsz.md  _get-started.md  _register.md  docs.md
docs/zh/插件用户手册 V1.0.0/: index.md
docs/插件用户手册 V1.0.0/: index.md
docs/插件用户手册 V1.0.0/1 - 简介/: index.md
docs/插件用户手册 V1.0.0/2 - 安装指南/: index.md
docs/插件用户手册 V1.0.0/3 - 使用教程/: 3.3 - 动作检索与表情生成.md  3.5 - 动作混合.md
docs/插件用户手册 V1.0.0/4 - AX_Create 模块/: 4.2 - Generate 子模块.md  4.3 - Post Process 子模块.md
docs/插件用户手册 V1.0.0/5 - AX_Animate 模块/: 5.3 - Smart Blend 子模块.md  index.md
docs/插件用户手册 V1.0.0/7 - 技术支持/: index.md
scripts/: release.py  update_toc.py
scripts/utils/: structure.py
(+13 files in other folders)
